navbar on mobile fixed

--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -1,6 +1,6 @@
 h1 {
     font-size: xx-large;
-    padding-left: 20px;
+    margin-left: 20px;
     margin-top: 13px;
     margin-bottom: 20px
 }
@@ -47,7 +47,7 @@ h1 {
         float: none;
         margin-bottom: 0;
         margin-top: 0;
-        margin-left: 20px;
+        margin-left: 22px;
         margin-right: 100px;
         font-weight: bold;
     }
